--- a/styles/styles.css
+++ b/styles/styles.css
@@ -108,3 +108,46 @@ nav {
   flex: 1;
   font-size: 2rem;
  }
+
+
+.events {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Pacifico', cursive;
+  background-color: #FFF685;
+  box-sizing: border-box;
+  position: relative;      
+  padding: 1rem;
+  padding-bottom: 60px;   
+}
+
+
+.events::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 60px; /* adjust height to fit your hearts.svg */
+  background-image: url("love.svg"); /* make sure this path is correct */
+  background-repeat: repeat-x;
+  background-size: contain;
+  background-position: bottom center;
+  pointer-events: none;
+  z-index: 5;
+}
+
+
+.event-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+}
+
+
+.event-list {
+  font-family: Raleway; 
+  font-size: 2rem;
+  line-height: 1.7;
+}
