--- a/styles/styles.css
+++ b/styles/styles.css
@@ -97,6 +97,22 @@ nav {
   gap: 3rem;
   margin: 0 auto;
   max-width: 1000px;
+  position: relative;
+}
+
+.about-me::after {
+  content: "";
+  position: absolute;
+  bottom: -50px;
+  left: 50%;                           
+  transform: translateX(-50%);
+  width: 100vw;
+  height: 60px;
+  background-image: url("plant.svg");
+  background-repeat: repeat-x;
+  background-size: auto 100%;
+  pointer-events: none;
+  z-index: 5;
 }
 
 .about-me-img {
@@ -129,7 +145,7 @@ nav {
   left: 0;
   width: 100%;
   height: 60px; /* adjust height to fit your hearts.svg */
-  background-image: url("../love.svg"); /* make sure this path is correct */
+  background-image: url("love.svg"); /* make sure this path is correct */
   background-repeat: repeat-x;
   background-size: contain;
   background-position: bottom center;
@@ -150,4 +166,30 @@ nav {
   font-family: Raleway; 
   font-size: 2rem;
   line-height: 1.7;
+}
+
+
+.contact-container {
+  background-color: #ACE1AF;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Pacifico', cursive;
+  font-size: 3rem;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.rsvp-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  outline: 5px solid red;
+}
+
+
+.rsvp-header {
+  font-family: 'Pacifico', cursive;
+  font-size: 3rem;
 }
